--- a/index.html
+++ b/index.html
@@ -38,40 +38,40 @@
                     <div class="login" id="login">
                         <h2 class="text-center fw-bold">Login</h2>
                         <form action="/" method="post">
-                            <div class="mb-3">
-                                <div class="input_icons row">
-                                    <div class="col-1">
-                                        <label for="exampleInputEmail1" class="form-label"><i
-                                                class="fa fa-envelope icon_field">
-                                            </i></label>
-                                    </div>
-                                    <div class="col-11">
-                                        <input type="email" class="form-control input-field" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="example@email.com">
-                                    </div>
+                        <div class="mb-3">
+                            <div class="input_icons row">
+                                <div class="col-1">
+                                    <label for="exampleInputEmail1" class="form-label"><i
+                                            class="fa fa-envelope icon_field">
+                                    </i></label>
+                                </div>
+                                <div class="col-11">
+                                    <input type="email" name="Email" class="form-control input-field" id="exampleInputEmail1"
+                                           aria-describedby="emailHelp" placeholder="example@email.com" required>
                                 </div>
                             </div>
-                            <div class="mb-3">
-                                <div class="input_icons row">
-                                    <div class="col-1">
-                                        <label for="exampleInputPassword1" class="form-label"><i
-                                                class="fa fa-key icon_field">
-                                            </i></label>
-                                    </div>
-                                    <div class="col-11">
-                                        <input type="password" class="form-control input-field"
-                                            id="exampleInputPassword1" placeholder="********">
-                                    </div>
+                        </div>
+                        <div class="mb-3">
+                            <div class="input_icons row">
+                                <div class="col-1">
+                                    <label for="exampleInputPassword1" class="form-label"><i
+                                            class="fa fa-key icon_field">
+                                    </i></label>
+                                </div>
+                                <div class="col-11">
+                                    <input type="password" name="Password" class="form-control input-field"
+                                           id="exampleInputPassword1" placeholder="********" required>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="mb-3 form-check my-3">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Keep me Logged In</label>
-                                <a href="#" class="link float-end" onclick="forget()">Forget Password</a>
-                            </div>
-                            <button type="submit" class="btn btn-primary-login mb-3">LOGIN</button>
-                        </form>
+                        <div class="mb-3 form-check my-3">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Keep me Logged In</label>
+                            <a href="#" class="link float-end" onclick="forget()">Forget Password</a>
+                        </div>
+                        <button type="submit" class="btn btn-primary-login mb-3">LOGIN</button>
+                    </form>
                         <a href="#" class="link" id="reg" onclick="reg()">Registration</a>
                     </div>
 
@@ -92,8 +92,8 @@
                                             </i></label>
                                     </div>
                                     <div class="col-11">
-                                        <input type="text" class="form-control input-field" id="exampleInputUser1"
-                                             placeholder="Full Name">
+                                        <input type="text" name="Full_Name" class="form-control input-field" id="exampleInputUser1"
+                                             placeholder="Full Name" required>
                                     </div>
                                 </div>
                             </div>
@@ -105,8 +105,8 @@
                                             </i></label>
                                     </div>
                                     <div class="col-11">
-                                        <input type="email" class="form-control input-field" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="example@email.com">
+                                        <input type="email" name="Email" class="form-control input-field" id="exampleInputEmail1"
+                                            aria-describedby="emailHelp" placeholder="example@email.com" required>
                                     </div>
                                 </div>
                             </div>
@@ -118,8 +118,8 @@
                                             </i></label>
                                     </div>
                                     <div class="col-11">
-                                        <input type="password" class="form-control input-field"
-                                            id="exampleInputPassword1" placeholder="********">
+                                        <input type="password" name="Password" class="form-control input-field"
+                                            id="exampleInputPassword1" placeholder="********"  pattern="(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                                     </div>
                                 </div>
                             </div>
@@ -133,41 +133,41 @@
             document.getElementById("regis").innerHTML = `<div class="login" id="login">
                         <h2 class="text-center fw-bold">Login</h2>
                         <form action="/" method="post">
-                            <div class="mb-3">
-                                <div class="input_icons row">
-                                    <div class="col-1">
-                                        <label for="exampleInputEmail1" class="form-label"><i
-                                                class="fa fa-envelope icon_field">
-                                            </i></label>
-                                    </div>
-                                    <div class="col-11">
-                                        <input type="email" class="form-control input-field" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="example@email.com">
-                                    </div>
+                        <div class="mb-3">
+                            <div class="input_icons row">
+                                <div class="col-1">
+                                    <label for="exampleInputEmail1" class="form-label"><i
+                                            class="fa fa-envelope icon_field">
+                                    </i></label>
+                                </div>
+                                <div class="col-11">
+                                    <input type="email" name="Email" class="form-control input-field" id="exampleInputEmail1"
+                                           aria-describedby="emailHelp" placeholder="example@email.com" required>
                                 </div>
                             </div>
-                            <div class="mb-3">
-                                <div class="input_icons row">
-                                    <div class="col-1">
-                                        <label for="exampleInputPassword1" class="form-label"><i
-                                                class="fa fa-key icon_field">
-                                            </i></label>
-                                    </div>
-                                    <div class="col-11">
-                                        <input type="password" class="form-control input-field"
-                                            id="exampleInputPassword1" placeholder="********">
-                                    </div>
+                        </div>
+                        <div class="mb-3">
+                            <div class="input_icons row">
+                                <div class="col-1">
+                                    <label for="exampleInputPassword1" class="form-label"><i
+                                            class="fa fa-key icon_field">
+                                    </i></label>
+                                </div>
+                                <div class="col-11">
+                                    <input type="password" name="Password" class="form-control input-field"
+                                           id="exampleInputPassword1" placeholder="********" required>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="mb-3 form-check my-3">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Keep me Logged In</label>
-                                <a href="#" class="link float-end" onclick="forget()">Forget Password</a>
-                            </div>
-                            <button type="submit" class="btn btn-primary-login mb-3">LOGIN</button>
-                        </form>
-                        <a href="#" class="link" id="reg" onclick="reg()">Registration</a>
+                        <div class="mb-3 form-check my-3">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Keep me Logged In</label>
+                            <a href="#" class="link float-end" onclick="forget()">Forget Password</a>
+                        </div>
+                        <button type="submit" class="btn btn-primary-login mb-3">LOGIN</button>
+                    </form>
+                    <a href="#" class="link" id="reg" onclick="reg()">Registration</a>
                     </div>`;
         }
         function forget(){
@@ -183,12 +183,12 @@
                                             </i></label>
                                     </div>
                                     <div class="col-11">
-                                        <input type="email" class="form-control input-field" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="example@email.com">
+                                        <input type="email" name="Email" class="form-control input-field" id="exampleInputEmail1"
+                                            aria-describedby="emailHelp" placeholder="example@email.com" required>
                                     </div>
                                 </div>
                             </div>
-                            
+
 
                             <button type="submit" class="btn btn-primary-login mb-3">RECOVER PASSWORD</button>
                         </form>
